--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,37 @@ Game/Assets/Materials.meta
 ReviewProject/Debug/
 .vs/
 .vs/**
-*.suo$
-*.db$
-*.ipch$
+*.suo
+*.db
+*.ipch
+
+*.d 
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
