--- a/FMod/lowlevel/examples/vs2012/3d.vcxproj.filters
+++ b/FMod/lowlevel/examples/vs2012/3d.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="..\common_platform.cpp">
       <Filter>common</Filter>
     </ClCompile>
+    <ClCompile Include="..\3d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
