added playing sounds to work now!

--- a/ReviewProject/ReviewProject.vcxproj.filters
+++ b/ReviewProject/ReviewProject.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Code\Headers\math.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Code\FmodInc\common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Code\BaseClass.cpp">
