--- a/ReviewProject/ReviewProject.vcxproj
+++ b/ReviewProject/ReviewProject.vcxproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <ClInclude Include="Code\FmodInc\common.h" />
     <ClInclude Include="Code\Headers\BaseClass.h" />
+    <ClInclude Include="Code\Headers\FmodSound.h" />
     <ClInclude Include="Code\Headers\Hello.h" />
     <ClInclude Include="Code\Headers\math.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Code\BaseClass.cpp" />
+    <ClCompile Include="Code\FmodSound.cpp" />
     <ClCompile Include="Code\main.cpp" />
     <ClCompile Include="Code\Math.cpp" />
   </ItemGroup>
@@ -82,7 +84,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(IncludePath)</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
+    <LibraryPath>$(LibraryPath)$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);Code/lib;</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -103,7 +105,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>winmm.lib;fmodL_vc.lib;fmodL64_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>/Code/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
