--- a/ReviewProject/ReviewProject.vcxproj.filters
+++ b/ReviewProject/ReviewProject.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Code\FmodInc\common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Code\Headers\FmodSound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Code\BaseClass.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Code\Math.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Code\FmodSound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
